# Kill-Tower-Text-Version

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md
data/reports/2026-04-09_build_unknown/: gap-report.md  unresolved-coverage.json  unresolved-coverage.md
data/snapshots/2026-04-09_build_unknown/: manifest.json
docs/: architecture.md  combat-engine.md  data-contracts.md  parity-checklist.md  tui-flow.md
scripts/: diff_snapshot.py  fetch_spire_codex_export.py  generate_gap_report.py  generate_transcript_goldens.py  generate_unresolved_coverage_report.py  import_kotone_reference.py  normalize_snapshot.py  smoke_run.py
src/kill_tower/app/: __init__.py  config.py  main.py
src/kill_tower/cli/: __init__.py  data_cmds.py  debug_cmds.py  main.py  manual_play.py  run_cmds.py
src/kill_tower/data/: __init__.py  event_outcomes.py  loader.py  normalizers.py  registry.py  schemas.py  service.py  snapshot_selector.py  validators.py
src/kill_tower/engine/: __init__.py  action_queue.py  rng.py  state_models.py  turn_system.py
src/kill_tower/services/: __init__.py  ascension_service.py  coverage_service.py  event_service.py  map_service.py  parity_service.py  replay_service.py  (+5 more)
tests/integration/: test_data_service.py  test_manual_play_flow.py  test_registry_snapshot.py  test_run_service.py  test_save_service.py  test_vertical_slice.py
tests/parity/: test_language_execution_parity.py  test_transcript_goldens.py
tests/regression/: test_campaign_regression.py
tests/unit/: test_action_queue.py  test_ids.py  test_normalizers.py  test_turn_system.py
(+115 files in other folders)
