[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "kill-tower"
version = "0.1.0"
description = "Project scaffold for a text-based Slay the Spire 2 runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "httpx>=0.28,<1",
  "orjson>=3.10,<4",
  "pydantic>=2.11,<3",
  "rich>=14,<15",
  "textual>=3.0,<4",
  "typer>=0.16,<1"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
  "ruff>=0.11,<1"
]

[project.scripts]
kill-tower = "kill_tower.cli.main:run"
kill-tower-app = "kill_tower.app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kill_tower"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["kill_tower"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
